<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/onOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectionStatus"
        android:layout_alignParentStart="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/wifi"
        app:layout_constraintTop_toBottomOf="@+id/connectionStatus"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectionStatus"
        android:layout_alignBaseline="@+id/onOff"
        android:layout_alignBottom="@+id/onOff"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="-1dp"
        android:text="@string/buscar"
        app:layout_constraintTop_toBottomOf="@+id/connectionStatus"
        tools:layout_editor_absoluteX="185dp" />

    <ListView
        android:id="@+id/peerListView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/onOff"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="26dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/discover"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/OrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/peerListView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="151dp"
        android:layout_marginTop="114dp"
        android:text="@string/iniciar"
        tools:layout_editor_absoluteX="289dp"
        tools:layout_editor_absoluteY="460dp" />

    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/descoberta_de_pares"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

</RelativeLayout>